--- a/tox.ini
+++ b/tox.ini
@@ -6,4 +6,4 @@ envlist = py37
 whitelist_externals = poetry
 commands =
   poetry install -v
-  py.test -s -vv {posargs} {toxinidir}/test/test_executor.py
+  py.test --workers 10 -s -vv {posargs} {toxinidir}/test/test_executor.py
