--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest-parallel = "^0.0.9"
 pytest = "^4.6"
 tox = "^3.13"
 tox-run-command = "^0.4.0"
+tox-pyenv = "^1.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
