--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pytest = "^4.6"
 tox = "^3.13"
 tox-run-command = "^0.4.0"
 tox-pyenv = "^1.1"
+pyhamcrest = "^1.9"
 
 [build-system]
 requires = ["poetry>=0.12"]
