--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ tox = "^3.13"
 tox-run-command = "^0.4.0"
 tox-pyenv = "^1.1"
 pyhamcrest = "^1.9"
+astpretty = "^1.6"
 
 [build-system]
 requires = ["poetry>=0.12"]
