--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ astor = "^0.8.0"
 deepdiff = "^4.0"
 dataclasses = "^0.6.0"
 graphviz = "^0.11.1"
+absl-py = "^0.7.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
