--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,8 @@ pytype = "*"
 
 [tool.pylint.messages_control]
 disable = """
-bad-continuation,attribute-defined-outside-init,W0511,R0902,R0913,W0622,C0116,C0103,R0903
+bad-continuation,attribute-defined-outside-init,W0511,R0902,R0913,W0622,C0116,C0103,
+R0903,W0631,W0212,W0603,R1710
 """
 
 [build-system]
