--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,6 @@ envlist = py36, py37
 [testenv]
 whitelist_externals = poetry
 commands =
-  poetry install -v
+  poetry install --no-dev
+  pip install pytest pytest-parallel
   py.test --workers 10 -s -vv {posargs} {toxinidir}/test/test_executor.py
