Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ jobs:
       Python37:
         python.version: '3.7.4'
   pool:
-    vmImage: 'macos-10.13'
+    vmImage: 'vs2017-win2016'
   steps:
   - task: UsePythonVersion@0
     displayName: 'Use Python $(python.version)'
