--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,8 @@ isolated_build = true
 envlist = py36, py37
 
 [testenv]
-whitelist_externals = poetry
 commands =
+  pip install poetry pytest pytest-parallel
+  poetry config settings.virtualenvs.create false
   poetry install --no-dev
-  pip install pytest pytest-parallel pyparsing
   py.test --workers 10 -s -vv {posargs} {toxinidir}/test/test_executor.py
