--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@ envlist = py36, py37
 
 [testenv]
 commands =
-  pip install poetry pytest pytest-parallel
+  pip install poetry
   poetry config settings.virtualenvs.create false
   poetry install --no-dev
+  pip install pytest pytest-parallel
   py.test --workers 10 -s -vv {posargs} {toxinidir}/test/test_executor.py
