--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,5 @@ commands =
   pip install poetry
   poetry config settings.virtualenvs.create false
   poetry install --no-dev
-  pip install pytest pytest-parallel
-  py.test --workers 10 -s -vv {posargs} {toxinidir}/test/test_executor.py
+  pip install pytest pytest-xdist
+  py.test -n auto -s -vv {posargs} {toxinidir}/test/test_executor.py
