--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,6 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">= 3.6.7"
-bytecode = { git = "https://github.com/vstinner/bytecode.git", branch = "master" }
-uncompyle6 = { git = "https://github.com/rocky/python-uncompyle6.git", branch = "master" }
-xdis = { git = "https://github.com/rocky/python-xdis.git", branch = "master" }
 crayons = "^0.2.0"
 astor = "^0.8.0"
 deepdiff = "^4.0"
@@ -31,6 +28,7 @@ dataclasses = "^0.6.0"
 graphviz = "^0.11.1"
 absl-py = "^0.7.1"
 black = {version = "*", allows-prereleases = true}
+executing = "^0.3.2"
 
 [tool.poetry.dev-dependencies]
 pylint = { git = "https://github.com/PyCQA/pylint.git", branch = "master" }
