--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ graphviz = "^0.11.1"
 absl-py = "^0.7.1"
 black = {version = "*", allows-prereleases = true}
 executing = "^0.3.2"
+Pympler = "^0.8.0"
 
 [tool.poetry.dev-dependencies]
 pylint = { git = "https://github.com/PyCQA/pylint.git", branch = "master" }
